# deepstream_lpd_app

./: CMakeLists.txt  README.md
nvdsinfer_platedetectioncustomparser/: CMakeLists.txt  nvdsinfer_custombboxparser.cpp  utils.cpp  utils.h
